--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,14 +1,13 @@
 name: CodeQL
 
 on:
+  push:
+    branches:
+      - main
+  pull_request:
+  schedule:
+    - cron: '56 5 * * 1'
   workflow_call:
-#   push:
-#     branches:
-#       - main
-#   pull_request:
-#   schedule:
-#     - cron: '56 5 * * 1'
-#   workflow_call:
 
 jobs:
   analyze:
