--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -19,20 +19,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
 
-      # - name: "⚡ Cache node modules"
-      #   uses: actions/cache@v2
-      #   id: npm_cache_id
-      #   with:
-      #     path: node_modules
-      #     key: lint-${{ runner.os }}-npm-cache-${{ hashFiles('./package-lock.json') }}
-      #     restore-keys: |
-      #       lint-${{ runner.os }}-npm-cache-
-      #       lint-${{ runner.os }}-
-
-      - name: "📦 Install linter dependencies"
-        # if: steps.npm_cache_id.outputs.cache-hit != 'true'
-        run: npm install
+      - name: "📦 Install dependencies"
+        run: npm run install --ignore-scripts
 
       - name: "🧽 Lint all files"
         run: npm run lint --if-present
@@ -64,21 +55,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
-
-      # - name: "⚡ Cache node modules"
-      #   uses: actions/cache@v2
-      #   id: npm_cache_id
-      #   with:
-      #     path: ./client/node_modules
-      #     key: client-${{ runner.os }}-npm-cache-${{ hashFiles('./client/package-lock.json') }}
-      #     restore-keys: |
-      #       client-${{ runner.os }}-npm-cache-
-      #       client-${{ runner.os }}-
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
 
       - name: "📦 Install dependencies"
-        working-directory: ${{ env.working-directory }}
-        # if: steps.npm_cache_id.outputs.cache-hit != 'true'
-        run: npm install
+        run: npm run install --ignore-scripts
 
       - name: "✅  Run tests"
         working-directory: ${{ env.working-directory }}
@@ -123,10 +104,9 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
-          cache-dependency-path: client/package-lock.json
+          cache-dependency-path: '**/package-lock.json'
 
       - name: "📦 Install dependencies"
-        working-directory: ${{ env.working-directory }}
         run: npm run install --ignore-scripts
 
       - name: "🏗 Build client"
@@ -162,10 +142,9 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
-          cache-dependency-path: server/package-lock.json
+          cache-dependency-path: '**/package-lock.json'
 
       - name: "📦 Install dependencies"
-        working-directory: ${{ env.working-directory }}
         run: npm run install --ignore-scripts
 
       - name: "✅  Run tests"
