--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,6 @@ on:
         required: true
 
 env:
-  NODE_VERSION: 16
   CACHE_NAME: docker-image-cache
 
 jobs:
@@ -39,38 +38,12 @@ jobs:
       - name: "🔧 Set up Node"
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
 
-
-      - name: "⚡ Cache [CLIENT] node modules"
-        uses: actions/cache@v2
-        id: npm_client_cache_id
-        with:
-          path: ./client/node_modules
-          key: npm-${{ runner.os }}-npm-cache-${{ hashFiles('./client/package-lock.json') }}
-          restore-keys: |
-            npm-${{ runner.os }}-npm-cache-
-            npm-${{ runner.os }}-
-
-      - name: "📦 Install [CLIENT] dependencies"
-        working-directory: ./client
-        # if: steps.npm_client_cache_id.outputs.cache-hit != 'true'
-        run: npm install
-
-      # - name: "⚡ Cache [SERVER] node modules"
-      #   uses: actions/cache@v2
-      #   id: npm_server_cache_id
-      #   with:
-      #     path: ./server/node_modules
-      #     key: server-${{ runner.os }}-npm-cache-${{ hashFiles('./server/package-lock.json') }}
-      #     restore-keys: |
-      #       server-${{ runner.os }}-npm-cache-
-      #       server-${{ runner.os }}-
-
-      - name: "📦 Install [SERVER] dependencies"
-        working-directory: ./server
-        # if: steps.npm_server_cache_id.outputs.cache-hit != 'true'
-        run: npm install
+      - name: "📦 Install dependencies"
+        run: npm run install --ignore-scripts
 
       - name: "🔒 Login to DockerHub"
         uses: docker/login-action@v1
@@ -78,16 +51,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      # - name: "⚡ Cache Docker Build"
-      #   uses: actions/cache@v2
-      #   id: docker_cache_id
-      #   with:
-      #     path: docker-cache-action
-      #     key: ${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-build-${{ env.CACHE_NAME }}-
-      #       ${{ runner.os }}-build-
-      #       ${{ runner.os }}-
+       - name: "⚡ Cache Docker Build"
+        uses: actions/cache@v2
+        id: docker_cache_id
+        with:
+          path: docker-cache-action
+          key: docker-${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
+          restore-keys: |
+            docker-${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
 
       - name: 🔧 Create .env file
         run: |
@@ -96,7 +67,7 @@ jobs:
           cp .env ./client/.env
 
       - name: "🏗 Build w/ Docker Compose"
-        # if: steps.docker_cache_id.outputs.cache-hit != 'true'
+        if: steps.docker_cache_id.outputs.cache-hit != 'true'
         run: |
           docker-compose build
 
