--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,10 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
+      - uses: actions/cache@v2
+        with: path: '**/node_modules'
+        key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+
       - name: "📦 Install dependencies"
         run: npm install
 
@@ -51,14 +55,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: "⚡ Cache Docker Build"
-        uses: actions/cache@v2
-        id: docker_cache_id
-        with:
-          path: docker-cache-action
-          key: docker-${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
-          restore-keys: |
-            docker-${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
+      # - name: "⚡ Cache Docker Build"
+      #   uses: actions/cache@v2
+      #   id: docker_cache_id
+      #   with:
+      #     path: docker-cache-action
+      #     key: docker-${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
+      #     restore-keys: |
+      #       docker-${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
 
       - name: 🔧 Create .env file
         run: |
@@ -67,7 +71,7 @@ jobs:
           cp .env ./client/.env
 
       - name: "🏗 Build w/ Docker Compose"
-        if: steps.docker_cache_id.outputs.cache-hit != 'true'
+        # if: steps.docker_cache_id.outputs.cache-hit != 'true'
         run: |
           docker-compose build
 
