--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -23,17 +23,21 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
+      - uses: actions/cache@v2
+        with: path: '**/node_modules'
+        key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+
       - name: "📦 Install dependencies"
         run: npm install
 
-      - name: "⚡ Cache Docker Build"
-        uses: actions/cache@v2
-        id: docker_cache_id
-        with:
-          path: docker-cache-action
-          key: docker-${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
-          restore-keys: |
-            docker-${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
+      # - name: "⚡ Cache Docker Build"
+      #   uses: actions/cache@v2
+      #   id: docker_cache_id
+      #   with:
+      #     path: docker-cache-action
+      #     key: docker-${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
+      #     restore-keys: |
+      #       docker-${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
 
       - name: "🔧 Create .env file"
         run: |
@@ -42,7 +46,7 @@ jobs:
           cp .env ./client/.env
 
       - name: "🏗 Build w/ Docker Compose"
-        if: steps.docker_cache_id.outputs.cache-hit != 'true'
+        # if: steps.docker_cache_id.outputs.cache-hit != 'true'
         run: |
           docker-compose build
 
@@ -62,17 +66,21 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
+      - uses: actions/cache@v2
+        with: path: '**/node_modules'
+        key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+
       - name: "📦 Install dependencies"
         run: npm install
 
-      - name: "⚡ Cache Docker Build"
-        uses: actions/cache@v2
-        id: docker_cache_id
-        with:
-          path: docker-cache-action
-          key: docker-${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
-          restore-keys: |
-            docker-${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
+      # - name: "⚡ Cache Docker Build"
+      #   uses: actions/cache@v2
+      #   id: docker_cache_id
+      #   with:
+      #     path: docker-cache-action
+      #     key: docker-${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
+      #     restore-keys: |
+      #       docker-${{ runner.os }}-build-${{ env.CACHE_NAME }}-${{ github.sha }}
 
       - name: "🔧 Create .env file"
         run: |
@@ -81,7 +89,7 @@ jobs:
           cp .env ./client/.env
 
       - name: "🏗 Build w/ Docker Compose"
-        if: steps.docker_cache_id.outputs.cache-hit != 'true'
+        # if: steps.docker_cache_id.outputs.cache-hit != 'true'
         run: |
           docker-compose build
 
