--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -22,9 +22,12 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
+      - uses: actions/cache@v2
+        with: path: '**/node_modules'
+        key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+
       - name: "📦 Install dependencies"
         run: npm install
-
       - name: "🧽 Lint all files"
         run: npm run lint --if-present
 
@@ -57,6 +60,10 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
+
+      - uses: actions/cache@v2
+        with: path: '**/node_modules'
+        key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
         run: npm install
@@ -106,6 +113,10 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
+      - uses: actions/cache@v2
+        with: path: '**/node_modules'
+        key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+
       - name: "📦 Install dependencies"
         run: npm install
 
@@ -143,6 +154,10 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
+
+      - uses: actions/cache@v2
+        with: path: '**/node_modules'
+        key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
         run: npm install
