--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -23,8 +23,9 @@ jobs:
           cache-dependency-path: '**/package-lock.json'
 
       - uses: actions/cache@v2
-        with: path: '**/node_modules'
-        key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
         run: npm install
@@ -62,8 +63,9 @@ jobs:
           cache-dependency-path: '**/package-lock.json'
 
       - uses: actions/cache@v2
-        with: path: '**/node_modules'
-        key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
         run: npm install
@@ -114,8 +116,9 @@ jobs:
           cache-dependency-path: '**/package-lock.json'
 
       - uses: actions/cache@v2
-        with: path: '**/node_modules'
-        key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
         run: npm install
@@ -156,8 +159,9 @@ jobs:
           cache-dependency-path: '**/package-lock.json'
 
       - uses: actions/cache@v2
-        with: path: '**/node_modules'
-        key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
         run: npm install
