--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,12 +42,14 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
 
-      - uses: actions/cache@v2
+      - uses: actions/cache@v3
+        id: modules-cache
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: "📦 Install dependencies"
+        if: steps.modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: "🔒 Login to DockerHub"
@@ -57,7 +59,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       # - name: "⚡ Cache Docker Build"
-      #   uses: actions/cache@v2
+      #   uses: actions/cache@v3
       #   id: docker_cache_id
       #   with:
       #     path: docker-cache-action
