add Docker Login step before publish

--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -13,6 +13,10 @@ jobs:
 
   docker_ci:
     uses: ./.github/workflows/docker_ci.yml
+    secrets:
+      ENV_PRODUCTION: ${{ secrets.ENV_PRODUCTION }}
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
   deploy:
     needs: [docker_ci]
