--- a/.github/workflows/docker_ci.yml
+++ b/.github/workflows/docker_ci.yml
@@ -2,9 +2,10 @@ name: Docker CI
 
 on:
   workflow_call:
-
-env:
-  CACHE_NAME: docker-image-cache
+    secrets:
+      ENV_PRODUCTION: ${{ secrets.ENV_PRODUCTION }}
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
 jobs:
 
@@ -60,6 +61,12 @@ jobs:
       - name: "✅ Run End-to-end tests"
         working-directory: ./__tests__
         run: npm test --if-present
+
+      - name: "🔒 Login to DockerHub"
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: "🐳 DockerHub Publish"
         run: |
