--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -12,6 +12,10 @@ jobs:
 
   docker_ci:
     uses: ./.github/workflows/docker_ci.yml
+    secrets:
+      ENV_PRODUCTION: ${{ secrets.ENV_PRODUCTION }}
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
   deploy:
     needs: [node_ci, docker_ci]
