--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -1,4 +1,4 @@
-name: branch_check
+name: Branch CI
 
 on:
   push:
@@ -8,12 +8,6 @@ on:
 
 jobs:
 
-  node_ci:
-    uses: ./.github/workflows/node_ci.yml
-
-  docker_ci:
-    uses: ./.github/workflows/docker_ci.yml
-    secrets:
-      ENV_PRODUCTION: ${{ secrets.ENV_PRODUCTION }}
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+  continuous_integration:
+    name: CI
+    uses: ./.github/workflows/continuous_integration.yml
