--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -7,18 +7,15 @@ on:
 
 jobs:
 
-  node_ci:
-    uses: ./.github/workflows/node_ci.yml
+  continuous_integration:
+    name: CI
+    uses: ./.github/workflows/continuous_integration.yml
 
-  docker_ci:
-    uses: ./.github/workflows/docker_ci.yml
-    secrets:
-      ENV_PRODUCTION: ${{ secrets.ENV_PRODUCTION }}
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-  deploy:
-    needs: [node_ci, docker_ci]
+  continuous_delivery:
+    name: CD
+    needs: [continuous_integration]
+    environment:
+      name: production
     uses: ./.github/workflows/deploy.yml
     secrets:
       ENV_PRODUCTION: ${{ secrets.ENV_PRODUCTION }}
